reviewed backend and added simple frontend ui for testing

--- a/be/requirements.txt
+++ b/be/requirements.txt
@@ -3,10 +3,11 @@ uvicorn
 sqlalchemy
 psycopg2-binary
 pydantic
+pydantic-settings
 beautifulsoup4
 requests
 python-dotenv
-pydantic-settings
-rank-bm25 
+rank-bm25
 nltk
 scikit-learn
+alembic
